@@ -1,7 +1,8 @@
 package jp.co.future.uroborosql;
 
-import static org.hamcrest.MatcherAssert.*;
-import static org.hamcrest.Matchers.*;
+import static org.hamcrest.CoreMatchers.is;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.junit.jupiter.api.Assertions.fail;
 
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -12,9 +13,11 @@ import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.time.LocalDate;
+import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
@@ -49,7 +52,7 @@ public class SqlAgentRetryTest {
 
 		var sqls = new String(Files.readAllBytes(Paths.get("src/test/resources/sql/ddl/create_tables.sql")),
 				StandardCharsets.UTF_8).split(";");
-		for (String sql : sqls) {
+		for (var sql : sqls) {
 			if (StringUtils.isNotBlank(sql)) {
 				agent.updateWith(sql.trim()).count();
 			}
@@ -66,11 +69,11 @@ public class SqlAgentRetryTest {
 	 * クエリ実行のリトライ
 	 */
 	@Test
-	public void testQueryRetryNoWait() throws Exception {
+	void testQueryRetryNoWait() throws Exception {
 		var retryCount = 3;
 		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, 60));
 
-		var query = agent.query("example/select_product").param("product_id", List.of(0, 1)).retry(retryCount + 1);
+		var query = agent.query("example/select_product").param("product_id", 0, 1).retry(retryCount + 1);
 		query.collect();
 		assertThat(query.context().contextAttrs().get("__retryCount"), is(retryCount));
 	}
@@ -79,11 +82,11 @@ public class SqlAgentRetryTest {
 	 * クエリ実行のリトライ
 	 */
 	@Test
-	public void testQueryRetryNoWaitSqlState() throws Exception {
+	void testQueryRetryNoWaitSqlState() throws Exception {
 		var retryCount = 3;
 		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, 0, "60"));
 
-		var query = agent.query("example/select_product").param("product_id", List.of(0, 1)).retry(retryCount + 1);
+		var query = agent.query("example/select_product").param("product_id", 0, 1).retry(retryCount + 1);
 		query.collect();
 		assertThat(query.context().contextAttrs().get("__retryCount"), is(retryCount));
 	}
@@ -92,11 +95,11 @@ public class SqlAgentRetryTest {
 	 * クエリ実行のリトライ（待機あり）
 	 */
 	@Test
-	public void testQueryRetryWait() throws Exception {
+	void testQueryRetryWait() throws Exception {
 		var retryCount = 3;
 		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, 60));
 
-		var query = agent.query("example/select_product").param("product_id", List.of(0, 1))
+		var query = agent.query("example/select_product").param("product_id", 0, 1)
 				.retry(retryCount + 1, 10);
 		query.collect();
 		assertThat(query.context().contextAttrs().get("__retryCount"), is(retryCount));
@@ -106,11 +109,11 @@ public class SqlAgentRetryTest {
 	 * クエリ実行のリトライ（待機あり）
 	 */
 	@Test
-	public void testQueryRetryWaitSqlState() throws Exception {
+	void testQueryRetryWaitSqlState() throws Exception {
 		var retryCount = 3;
 		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, 0, "60"));
 
-		var query = agent.query("example/select_product").param("product_id", List.of(0, 1))
+		var query = agent.query("example/select_product").param("product_id", 0, 1)
 				.retry(retryCount + 1, 10);
 		query.collect();
 		assertThat(query.context().contextAttrs().get("__retryCount"), is(retryCount));
@@ -120,16 +123,16 @@ public class SqlAgentRetryTest {
 	 * クエリ実行のリトライ（リトライ回数上限）
 	 */
 	@Test
-	public void testQueryRetryOver() throws Exception {
+	void testQueryRetryOver() throws Exception {
 		var retryCount = 3;
 		var errorCode = 60;
 		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, errorCode));
 
 		SqlQuery query = null;
 		try {
-			query = agent.query("example/select_product").param("product_id", List.of(0, 1)).retry(retryCount - 1);
+			query = agent.query("example/select_product").param("product_id", 0, 1).retry(retryCount - 1);
 			query.collect();
-			assertThat("Fail here.", false);
+			fail();
 		} catch (UroborosqlSQLException ex) {
 			assertThat(query.context().contextAttrs().get("__retryCount"), is(retryCount - 1));
 			assertThat(ex.getErrorCode(), is(errorCode));
@@ -140,7 +143,7 @@ public class SqlAgentRetryTest {
 	 * クエリ実行のリトライ（リトライ回数上限）
 	 */
 	@Test
-	public void testQueryRetryOverSqlState() throws Exception {
+	void testQueryRetryOverSqlState() throws Exception {
 		var retryCount = 3;
 		var errorCode = 0;
 		var sqlState = "60";
@@ -148,9 +151,9 @@ public class SqlAgentRetryTest {
 
 		SqlQuery query = null;
 		try {
-			query = agent.query("example/select_product").param("product_id", List.of(0, 1)).retry(retryCount - 1);
+			query = agent.query("example/select_product").param("product_id", 0, 1).retry(retryCount - 1);
 			query.collect();
-			assertThat("Fail here.", false);
+			fail();
 		} catch (UroborosqlSQLException ex) {
 			assertThat(query.context().contextAttrs().get("__retryCount"), is(retryCount - 1));
 			assertThat(ex.getErrorCode(), is(errorCode));
@@ -162,16 +165,16 @@ public class SqlAgentRetryTest {
 	 * クエリ実行のリトライ（リトライ対象外のエラー発生）
 	 */
 	@Test
-	public void testQueryNoRetry() throws Exception {
+	void testQueryNoRetry() throws Exception {
 		var retryCount = 3;
 		var errorCode = 1;
 		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, errorCode));
 
 		SqlQuery query = null;
 		try {
-			query = agent.query("example/select_product").param("product_id", List.of(0, 1)).retry(retryCount - 1);
+			query = agent.query("example/select_product").param("product_id", 0, 1).retry(retryCount - 1);
 			query.collect();
-			assertThat("Fail here.", false);
+			fail();
 		} catch (UroborosqlSQLException ex) {
 			assertThat(query.context().contextAttrs().get("__retryCount"), is(0));
 			assertThat(ex.getErrorCode(), is(errorCode));
@@ -182,7 +185,7 @@ public class SqlAgentRetryTest {
 	 * クエリ実行のリトライ（リトライ対象外のエラー発生）
 	 */
 	@Test
-	public void testQueryNoRetrySqlState() throws Exception {
+	void testQueryNoRetrySqlState() throws Exception {
 		var retryCount = 3;
 		var errorCode = 0;
 		var sqlState = "1";
@@ -190,9 +193,9 @@ public class SqlAgentRetryTest {
 
 		SqlQuery query = null;
 		try {
-			query = agent.query("example/select_product").param("product_id", List.of(0, 1)).retry(retryCount - 1);
+			query = agent.query("example/select_product").param("product_id", 0, 1).retry(retryCount - 1);
 			query.collect();
-			assertThat("Fail here.", false);
+			fail();
 		} catch (UroborosqlSQLException ex) {
 			assertThat(query.context().contextAttrs().get("__retryCount"), is(0));
 			assertThat(ex.getErrorCode(), is(errorCode));
@@ -204,11 +207,11 @@ public class SqlAgentRetryTest {
 	 * クエリ実行のリトライ（リトライ対象外のエラー発生）
 	 */
 	@Test
-	public void testQueryRetryWithPessimisticLock() throws Exception {
+	void testQueryRetryWithPessimisticLock() throws Exception {
 		var retryCount = 3;
 		var errorCode = 50200;
 		// SqlRetryCodeListを空にして、悲観ロック対象エラーコードで判定する
-		config.getSqlAgentProvider().setSqlRetryCodeList(Collections.emptyList());
+		config.getSqlAgentProvider().setSqlRetryCodeList(List.of());
 		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, errorCode));
 
 		SqlQuery query = null;
@@ -216,11 +219,11 @@ public class SqlAgentRetryTest {
 			query = agent.query("example/select_product").param("product_id", Arrays.asList(0, 1))
 					.retry(retryCount - 1);
 			query.collect();
-			assertThat("Fail here.", false);
+			fail();
 		} catch (PessimisticLockException ex) {
 			assertThat(query.context().contextAttrs().get("__retryCount"), is(0));
 		} catch (Exception ex) {
-			assertThat("Fail here.", false);
+			fail();
 		}
 	}
 
@@ -228,7 +231,7 @@ public class SqlAgentRetryTest {
 	 * 更新のリトライ
 	 */
 	@Test
-	public void testUpdateRetryNoWait() throws Exception {
+	void testUpdateRetryNoWait() throws Exception {
 		var retryCount = 3;
 		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, 60));
 
@@ -243,7 +246,7 @@ public class SqlAgentRetryTest {
 	 * 更新のリトライ
 	 */
 	@Test
-	public void testUpdateRetryNoWaitSqlState() throws Exception {
+	void testUpdateRetryNoWaitSqlState() throws Exception {
 		var retryCount = 3;
 		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, 0, "60"));
 
@@ -258,7 +261,7 @@ public class SqlAgentRetryTest {
 	 * 更新のリトライ
 	 */
 	@Test
-	public void testUpdateRetryWait() throws Exception {
+	void testUpdateRetryWait() throws Exception {
 		var retryCount = 3;
 		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, 60));
 
@@ -273,7 +276,7 @@ public class SqlAgentRetryTest {
 	 * 更新のリトライ
 	 */
 	@Test
-	public void testUpdateRetryWaitSqlState() throws Exception {
+	void testUpdateRetryWaitSqlState() throws Exception {
 		var retryCount = 3;
 		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, 0, "60"));
 
@@ -288,7 +291,7 @@ public class SqlAgentRetryTest {
 	 * 更新のリトライ（リトライ回数上限）
 	 */
 	@Test
-	public void testUpdateRetryOver() throws Exception {
+	void testUpdateRetryOver() throws Exception {
 		var retryCount = 3;
 		var errorCode = 60;
 		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, errorCode));
@@ -299,7 +302,7 @@ public class SqlAgentRetryTest {
 					.param("product_kana_name", "test_kana").param("jan_code", "1234567890123")
 					.param("product_description", "").param("ins_datetime", LocalDate.now()).retry(retryCount - 1);
 			update.count();
-			assertThat("Fail here.", false);
+			fail();
 		} catch (UroborosqlSQLException ex) {
 			assertThat(update.context().contextAttrs().get("__retryCount"), is(retryCount - 1));
 			assertThat(ex.getErrorCode(), is(errorCode));
@@ -310,7 +313,7 @@ public class SqlAgentRetryTest {
 	 * 更新のリトライ（リトライ回数上限）
 	 */
 	@Test
-	public void testUpdateRetryOverSqlState() throws Exception {
+	void testUpdateRetryOverSqlState() throws Exception {
 		var retryCount = 3;
 		var errorCode = 0;
 		var sqlState = "60";
@@ -322,7 +325,7 @@ public class SqlAgentRetryTest {
 					.param("product_kana_name", "test_kana").param("jan_code", "1234567890123")
 					.param("product_description", "").param("ins_datetime", LocalDate.now()).retry(retryCount - 1);
 			update.count();
-			assertThat("Fail here.", false);
+			fail();
 		} catch (UroborosqlSQLException ex) {
 			assertThat(update.context().contextAttrs().get("__retryCount"), is(retryCount - 1));
 			assertThat(ex.getErrorCode(), is(errorCode));
@@ -334,7 +337,7 @@ public class SqlAgentRetryTest {
 	 * 更新のリトライ（リトライ対象外のエラー発生）
 	 */
 	@Test
-	public void testUpdateNotRetry() throws Exception {
+	void testUpdateNotRetry() throws Exception {
 		var retryCount = 3;
 		var errorCode = 1;
 		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, errorCode));
@@ -345,7 +348,7 @@ public class SqlAgentRetryTest {
 					.param("product_kana_name", "test_kana").param("jan_code", "1234567890123")
 					.param("product_description", "").param("ins_datetime", LocalDate.now()).retry(retryCount - 1);
 			update.count();
-			assertThat("Fail here.", false);
+			fail();
 		} catch (UroborosqlSQLException ex) {
 			assertThat(update.context().contextAttrs().get("__retryCount"), is(0));
 			assertThat(ex.getErrorCode(), is(errorCode));
@@ -356,7 +359,7 @@ public class SqlAgentRetryTest {
 	 * 更新のリトライ（リトライ対象外のエラー発生）
 	 */
 	@Test
-	public void testUpdateNotRetrySqlState() throws Exception {
+	void testUpdateNotRetrySqlState() throws Exception {
 		var retryCount = 3;
 		var errorCode = 0;
 		var sqlState = "1";
@@ -368,7 +371,7 @@ public class SqlAgentRetryTest {
 					.param("product_kana_name", "test_kana").param("jan_code", "1234567890123")
 					.param("product_description", "").param("ins_datetime", LocalDate.now()).retry(retryCount - 1);
 			update.count();
-			assertThat("Fail here.", false);
+			fail();
 		} catch (UroborosqlSQLException ex) {
 			assertThat(update.context().contextAttrs().get("__retryCount"), is(0));
 			assertThat(ex.getErrorCode(), is(errorCode));
@@ -377,10 +380,42 @@ public class SqlAgentRetryTest {
 	}
 
 	/**
+	 * バッチ更新のリトライ
+	 */
+	@Test
+	void testBatchRetryNoWait() throws Exception {
+		var retryCount = 3;
+		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, 60));
+
+		var paramList = new ArrayList<Map<String, Object>>();
+		var paramMap = new HashMap<String, Object>();
+		paramMap.put("product_name", "test");
+		paramMap.put("product_kana_name", "test_kana");
+		paramMap.put("jan_code", "1234567890123");
+		paramMap.put("product_description", "");
+		paramMap.put("ins_datetime", LocalDate.now());
+		paramList.add(paramMap);
+
+		paramMap = new HashMap<>();
+		paramMap.put("product_name", "test2");
+		paramMap.put("product_kana_name", "test_kana2");
+		paramMap.put("jan_code", "1234567890124");
+		paramMap.put("product_description", "1");
+		paramMap.put("ins_datetime", LocalDate.now());
+		paramList.add(paramMap);
+
+		var batch = agent.batch("example/insert_product_regist_work")
+				.paramStream(paramList.stream())
+				.retry(retryCount + 1);
+		batch.count();
+		assertThat(batch.context().contextAttrs().get("__retryCount"), is(retryCount));
+	}
+
+	/**
 	 * プロシージャのリトライ
 	 */
 	@Test
-	public void testProcedureRetryNoWait() throws Exception {
+	void testProcedureRetryNoWait() throws Exception {
 		var retryCount = 3;
 		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, 60));
 
@@ -395,7 +430,7 @@ public class SqlAgentRetryTest {
 	 * プロシージャのリトライ
 	 */
 	@Test
-	public void testProcedureRetryNoWaitSqlState() throws Exception {
+	void testProcedureRetryNoWaitSqlState() throws Exception {
 		var retryCount = 3;
 		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, 0, "60"));
 
@@ -410,7 +445,7 @@ public class SqlAgentRetryTest {
 	 * プロシージャのリトライ
 	 */
 	@Test
-	public void testProcedureRetryWait() throws Exception {
+	void testProcedureRetryWait() throws Exception {
 		var retryCount = 3;
 		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, 60));
 
@@ -425,7 +460,7 @@ public class SqlAgentRetryTest {
 	 * プロシージャのリトライ
 	 */
 	@Test
-	public void testProcedureRetryWaitSqlState() throws Exception {
+	void testProcedureRetryWaitSqlState() throws Exception {
 		var retryCount = 3;
 		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, 0, "60"));
 
@@ -440,7 +475,7 @@ public class SqlAgentRetryTest {
 	 * プロシージャのリトライ（リトライ回数上限）
 	 */
 	@Test
-	public void testProcedureRetryOver() throws Exception {
+	void testProcedureRetryOver() throws Exception {
 		var retryCount = 3;
 		var errorCode = 60;
 		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, errorCode));
@@ -451,7 +486,7 @@ public class SqlAgentRetryTest {
 					.param("product_kana_name", "test_kana").param("jan_code", "1234567890123")
 					.param("product_description", "").param("ins_datetime", LocalDate.now()).retry(retryCount - 1);
 			proc.call();
-			assertThat("Fail here.", false);
+			fail();
 		} catch (SQLException ex) {
 			assertThat(proc.context().contextAttrs().get("__retryCount"), is(retryCount - 1));
 			assertThat(ex.getErrorCode(), is(errorCode));
@@ -462,7 +497,7 @@ public class SqlAgentRetryTest {
 	 * プロシージャのリトライ（リトライ回数上限）
 	 */
 	@Test
-	public void testProcedureRetryOverSqlState() throws Exception {
+	void testProcedureRetryOverSqlState() throws Exception {
 		var retryCount = 3;
 		var errorCode = 0;
 		var sqlState = "60";
@@ -474,7 +509,7 @@ public class SqlAgentRetryTest {
 					.param("product_kana_name", "test_kana").param("jan_code", "1234567890123")
 					.param("product_description", "").param("ins_datetime", LocalDate.now()).retry(retryCount - 1);
 			proc.call();
-			assertThat("Fail here.", false);
+			fail();
 		} catch (SQLException ex) {
 			assertThat(proc.context().contextAttrs().get("__retryCount"), is(retryCount - 1));
 			assertThat(ex.getErrorCode(), is(errorCode));
@@ -486,7 +521,7 @@ public class SqlAgentRetryTest {
 	 * プロシージャのリトライ（リトライ対象外のエラー発生）
 	 */
 	@Test
-	public void testProcedureNoRetry() throws Exception {
+	void testProcedureNoRetry() throws Exception {
 		var retryCount = 3;
 		var errorCode = 1;
 		config.getSqlFilterManager().addSqlFilter(new RetrySqlFilter(retryCount, errorCode));
@@ -497,7 +532,7 @@ public class SqlAgentRetryTest {
 					.param("product_kana_name", "test_kana").param("jan_code", "1234567890123")
 					.param("product_description", "").param("ins_datetime", LocalDate.now()).retry(retryCount - 1);
 			proc.call();
-			assertThat("Fail here.", false);
+			fail();
 		} catch (SQLException ex) {
 			assertThat(proc.context().contextAttrs().get("__retryCount"), is(0));
 			assertThat(ex.getErrorCode(), is(errorCode));
@@ -508,7 +543,7 @@ public class SqlAgentRetryTest {
 	 * プロシージャのリトライ（リトライ対象外のエラー発生）
 	 */
 	@Test
-	public void testProcedureNoRetrySqlState() throws Exception {
+	void testProcedureNoRetrySqlState() throws Exception {
 		var retryCount = 3;
 		var errorCode = 0;
 		var sqlState = "1";
@@ -520,7 +555,7 @@ public class SqlAgentRetryTest {
 					.param("product_kana_name", "test_kana").param("jan_code", "1234567890123")
 					.param("product_description", "").param("ins_datetime", LocalDate.now()).retry(retryCount - 1);
 			proc.call();
-			assertThat("Fail here.", false);
+			fail();
 		} catch (SQLException ex) {
 			assertThat(proc.context().contextAttrs().get("__retryCount"), is(0));
 			assertThat(ex.getErrorCode(), is(errorCode));
@@ -556,14 +591,14 @@ public class SqlAgentRetryTest {
 		 * @see jp.co.future.uroborosql.filter.AbstractSqlFilter#doQuery(jp.co.future.uroborosql.context.ExecutionContext, java.sql.PreparedStatement, java.sql.ResultSet)
 		 */
 		@Override
-		public ResultSet doQuery(final ExecutionContext executionContext, final PreparedStatement preparedStatement,
+		public ResultSet doQuery(final ExecutionContext ExecutionContext, final PreparedStatement preparedStatement,
 				final ResultSet resultSet) throws SQLException {
 			if (retryCount > currentCount++) {
 				preparedStatement.getConnection().rollback();
 				throw new SQLException("Test Retry Exception", sqlState, errorCode);
 			}
 
-			return super.doQuery(executionContext, preparedStatement, resultSet);
+			return super.doQuery(ExecutionContext, preparedStatement, resultSet);
 		}
 
 		/**
@@ -572,7 +607,7 @@ public class SqlAgentRetryTest {
 		 * @see jp.co.future.uroborosql.filter.AbstractSqlFilter#doUpdate(jp.co.future.uroborosql.context.ExecutionContext, java.sql.PreparedStatement, int)
 		 */
 		@Override
-		public int doUpdate(final ExecutionContext executionContext, final PreparedStatement preparedStatement,
+		public int doUpdate(final ExecutionContext ExecutionContext, final PreparedStatement preparedStatement,
 				final int result)
 				throws SQLException {
 			if (retryCount > currentCount++) {
@@ -580,7 +615,7 @@ public class SqlAgentRetryTest {
 				throw new SQLException("Test Retry Exception", sqlState, errorCode);
 			}
 
-			return super.doUpdate(executionContext, preparedStatement, result);
+			return super.doUpdate(ExecutionContext, preparedStatement, result);
 		}
 
 		/**
@@ -589,7 +624,7 @@ public class SqlAgentRetryTest {
 		 * @see jp.co.future.uroborosql.filter.AbstractSqlFilter#doBatch(jp.co.future.uroborosql.context.ExecutionContext, java.sql.PreparedStatement, int[])
 		 */
 		@Override
-		public int[] doBatch(final ExecutionContext executionContext, final PreparedStatement preparedStatement,
+		public int[] doBatch(final ExecutionContext ExecutionContext, final PreparedStatement preparedStatement,
 				final int[] result)
 				throws SQLException {
 			if (retryCount > currentCount++) {
@@ -597,7 +632,7 @@ public class SqlAgentRetryTest {
 				throw new SQLException("Test Retry Exception", sqlState, errorCode);
 			}
 
-			return super.doBatch(executionContext, preparedStatement, result);
+			return super.doBatch(ExecutionContext, preparedStatement, result);
 		}
 
 		/**
@@ -606,14 +641,14 @@ public class SqlAgentRetryTest {
 		 * @see jp.co.future.uroborosql.filter.AbstractSqlFilter#doProcedure(jp.co.future.uroborosql.context.ExecutionContext, java.sql.CallableStatement, boolean)
 		 */
 		@Override
-		public boolean doProcedure(final ExecutionContext executionContext, final CallableStatement callableStatement,
+		public boolean doProcedure(final ExecutionContext ExecutionContext, final CallableStatement callableStatement,
 				final boolean result) throws SQLException {
 			if (retryCount > currentCount++) {
 				callableStatement.getConnection().rollback();
 				throw new SQLException("Test Retry Exception", sqlState, errorCode);
 			}
 
-			return super.doProcedure(executionContext, callableStatement, result);
+			return super.doProcedure(ExecutionContext, callableStatement, result);
 		}
 	}
 }
