@@ -1,11 +1,10 @@
 package jp.co.future.uroborosql;
 
-import static org.hamcrest.MatcherAssert.*;
-import static org.hamcrest.Matchers.*;
-import static org.junit.jupiter.api.Assertions.*;
+import static org.hamcrest.CoreMatchers.is;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 import java.nio.file.Paths;
-import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -18,7 +17,7 @@ import jp.co.future.uroborosql.enums.InsertsType;
 public class SqlEntityInsertTest extends AbstractDbTest {
 
 	@Test
-	public void testInsert() {
+	void testInsert() {
 		truncateTable("PRODUCT");
 		agent.required(() -> {
 			var product = new Product(1, "商品1", "ショウヒン1", "1111-1", "商品-1", new Date(), new Date(), 1);
@@ -29,7 +28,7 @@ public class SqlEntityInsertTest extends AbstractDbTest {
 	}
 
 	@Test
-	public void testInsertAndReturn() {
+	void testInsertAndReturn() {
 		truncateTable("PRODUCT");
 		agent.required(() -> {
 			var product = new Product(1, "商品1", "ショウヒン1", "1111-1", "商品-1", new Date(), new Date(), 1);
@@ -41,11 +40,13 @@ public class SqlEntityInsertTest extends AbstractDbTest {
 	}
 
 	@Test
-	public void testInsertThrowException() {
-		truncateTable("PRODUCT");
-		agent.required(() -> {
-			var product = new Product(1, "商品1", "ショウヒン1", "1111-1", "商品-1", new Date(), new Date(), 1);
-			assertThrows(IllegalArgumentException.class, () -> agent.insert(Stream.of(product)));
+	void testInsertThrowException() {
+		assertThrows(IllegalArgumentException.class, () -> {
+			truncateTable("PRODUCT");
+			agent.required(() -> {
+				var product = new Product(1, "商品1", "ショウヒン1", "1111-1", "商品-1", new Date(), new Date(), 1);
+				agent.insert(Stream.of(product));
+			});
 		});
 	}
 
@@ -53,7 +54,7 @@ public class SqlEntityInsertTest extends AbstractDbTest {
 	 * Entityを使った一括挿入処理のテストケース。
 	 */
 	@Test
-	public void testInserts() throws Exception {
+	void testInserts() throws Exception {
 		// 事前条件
 		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteBatch.ltsv"));
 
@@ -91,13 +92,13 @@ public class SqlEntityInsertTest extends AbstractDbTest {
 	 * Entityを使った一括挿入処理のテストケース（Streamが空の場合）。
 	 */
 	@Test
-	public void testInsertsEmpty() throws Exception {
+	void testInsertsEmpty() throws Exception {
 		// 事前条件
 		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteBatch.ltsv"));
 
 		agent.setDefaultInsertsType(InsertsType.BATCH);
 		agent.required(() -> {
-			List<Product> emptyList = Collections.emptyList();
+			List<Product> emptyList = List.of();
 			assertThat(agent.inserts(emptyList.stream()), is(0));
 		});
 
@@ -106,7 +107,7 @@ public class SqlEntityInsertTest extends AbstractDbTest {
 
 		agent.setDefaultInsertsType(InsertsType.BULK);
 		agent.required(() -> {
-			List<Product> emptyList = Collections.emptyList();
+			List<Product> emptyList = List.of();
 			assertThat(agent.inserts(emptyList.stream()), is(0));
 		});
 	}
@@ -115,7 +116,7 @@ public class SqlEntityInsertTest extends AbstractDbTest {
 	 * Entityを使った一括挿入処理のテストケース。
 	 */
 	@Test
-	public void testInsertsWithInsertsTypeBatch() throws Exception {
+	void testInsertsWithInsertsTypeBatch() throws Exception {
 		// 事前条件
 		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteBatch.ltsv"));
 
@@ -153,7 +154,7 @@ public class SqlEntityInsertTest extends AbstractDbTest {
 	 * Entityを使った一括挿入処理のテストケース。
 	 */
 	@Test
-	public void testInsertsWithInsertsTypeBulk() throws Exception {
+	void testInsertsWithInsertsTypeBulk() throws Exception {
 		// 事前条件
 		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteBatch.ltsv"));
 
@@ -191,7 +192,7 @@ public class SqlEntityInsertTest extends AbstractDbTest {
 	 * Entityを使った一括挿入処理のテストケース。
 	 */
 	@Test
-	public void testInsertsWithEntityType() throws Exception {
+	void testInsertsWithEntityType() throws Exception {
 		// 事前条件
 		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteBatch.ltsv"));
 
@@ -229,7 +230,7 @@ public class SqlEntityInsertTest extends AbstractDbTest {
 	 * Entityを使った一括挿入処理のテストケース。
 	 */
 	@Test
-	public void testInsertsWithEntityTypeAndInsertsType() throws Exception {
+	void testInsertsWithEntityTypeAndInsertsType() throws Exception {
 		// 事前条件
 		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteBatch.ltsv"));
 
@@ -299,7 +300,7 @@ public class SqlEntityInsertTest extends AbstractDbTest {
 	 * Entityを使った一括挿入処理のテストケース。
 	 */
 	@Test
-	public void testInsertsAndReturn() throws Exception {
+	void testInsertsAndReturn() throws Exception {
 		// 事前条件
 		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteBatch.ltsv"));
 
@@ -339,13 +340,13 @@ public class SqlEntityInsertTest extends AbstractDbTest {
 	 * Entityを使った一括挿入処理のテストケース（Streamが空の場合）。
 	 */
 	@Test
-	public void testInsertsAndReturnEmpty() throws Exception {
+	void testInsertsAndReturnEmpty() throws Exception {
 		// 事前条件
 		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteBatch.ltsv"));
 
 		agent.setDefaultInsertsType(InsertsType.BATCH);
 		agent.required(() -> {
-			List<Product> emptyList = Collections.emptyList();
+			List<Product> emptyList = List.of();
 			assertThat(agent.insertsAndReturn(emptyList.stream()).collect(Collectors.toList()).size(), is(0));
 		});
 
@@ -354,7 +355,7 @@ public class SqlEntityInsertTest extends AbstractDbTest {
 
 		agent.setDefaultInsertsType(InsertsType.BULK);
 		agent.required(() -> {
-			List<Product> emptyList = Collections.emptyList();
+			List<Product> emptyList = List.of();
 			assertThat(agent.insertsAndReturn(emptyList.stream()).collect(Collectors.toList()).size(), is(0));
 		});
 	}
@@ -363,7 +364,7 @@ public class SqlEntityInsertTest extends AbstractDbTest {
 	 * Entityを使った一括挿入処理のテストケース。
 	 */
 	@Test
-	public void testInsertsAndReturnWithInsertsTypeBatch() throws Exception {
+	void testInsertsAndReturnWithInsertsTypeBatch() throws Exception {
 		// 事前条件
 		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteBatch.ltsv"));
 
@@ -403,7 +404,7 @@ public class SqlEntityInsertTest extends AbstractDbTest {
 	 * Entityを使った一括挿入処理のテストケース。
 	 */
 	@Test
-	public void testInsertsAndReturnWithInsertsTypeBulk() throws Exception {
+	void testInsertsAndReturnWithInsertsTypeBulk() throws Exception {
 		// 事前条件
 		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteBatch.ltsv"));
 
@@ -443,7 +444,7 @@ public class SqlEntityInsertTest extends AbstractDbTest {
 	 * Entityを使った一括挿入処理のテストケース。
 	 */
 	@Test
-	public void testInsertsAndReturnWithType() throws Exception {
+	void testInsertsAndReturnWithType() throws Exception {
 		// 事前条件
 		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteBatch.ltsv"));
 
@@ -485,7 +486,7 @@ public class SqlEntityInsertTest extends AbstractDbTest {
 	 * Entityを使った一括挿入処理のテストケース。
 	 */
 	@Test
-	public void testInsertsAndReturnWithTypeAndInsertsType() throws Exception {
+	void testInsertsAndReturnWithTypeAndInsertsType() throws Exception {
 		// 事前条件
 		cleanInsert(Paths.get("src/test/resources/data/setup", "testExecuteBatch.ltsv"));
 
